[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asciify-them"
dynamic = ["dependencies", "version"]
authors = [
  {name = "Andrea Scalia", email = "andrea95scalia@gmail.com"}
]
keywords = ["ASCII art", "CLI"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/ndrscalia/asciify-them"
Documentation = "https://asciify-them.readthedocs.io/en/latest/"
Issues = "https://github.com/ndrscalia/asciify-them/issues"

[project.scripts]
asciify = "asciify.cli:main"
asciify-mcp = "asciify.mcp_server:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "asciify.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.10",
]
mcp = [
    "mcp[fastmcp]>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=asciify",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501", "I"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
